package seedu.duke.command;

public enum CommandType {
    CREATE,
    VIEW,
    ADD,
    DELETE,
    EXIT,
    HELP,
    LIST
}
